# mathvizanimator

./: .clang-format  .cspell.json  .gitignore  .mega-linter.yml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: devops-request.md  documentation-request.md  refactor-request.md
.github/workflows/: build.yml  mega-linter.yml  unix_release.yml  unix_release.yml.autosave
app/: CMakeLists.txt
app/src/: main.cpp  main.h  mainlogic.cpp  mainlogic.h
app/src/gui/: mainwindow.cpp  mainwindow.h
app/src/workflow/: logging.h
app/tests/: CMakeLists.txt
app/tests/integration_tests/: inttesthelperfcts.cpp  inttesthelperfcts.h  test_helper_functions.cpp  test_helper_functions.h  tst_animation.cpp  tst_menu_file.cpp  tst_menu_project.cpp  tst_user_interaction.cpp
app/tests/integration_tests_data/: integrations_tests_res.qrc  test_save_file.json
cmake/: CodeCoverage.cmake  FindCairo.cmake  presets.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  first_steps.rst  index.rst
docs/developer/: developer.rst  index.rst  libraries.rst  mva_gui.rst  mva_workflow.rst  project_structure.rst  testing.rst  workflows.rst
docs/developer/reference/: index.rst  reference.rst
docs/first_steps/: index.rst
docs/user_guide/: bugs_features.rst  index.rst  latex_items.rst  project_settings.rst
examples/first_steps/: save_file.json
libs/: CMakeLists.txt
libs/mva_gui/: CMakeLists.txt  mva_gui_resources.qrc
libs/mva_gui/include/animations/: abstract_animation.h  abstractanimation.h  fade_in.h  fade_out.h  fadein.h  fadeout.h  property_animation.h  propertyanimation.h  real_property_animation.h  realpropertyanimation.h
libs/mva_gui/include/items/: abstractitem.h  basic_item.h  basicitem.h  circleitem.h  circlepainteditem.h  geometry_item.h  rectangle.h  textitem.h
libs/mva_gui/include/private/: logging.h
libs/mva_gui/include/windows/: mainwindowhandler.h
libs/mva_gui/qml/: MainWindow.qml
libs/mva_gui/qml/items/: MVABasicItem.qml  MVACircle.qml  MVAMouseArea.qml  MVAPaintedCircle.qml  MVARectangle.qml  MVASurroundingRectangle.qml  MVAText.qml
libs/mva_gui/qml/models/: MVAItemDelegate.qml  MVAItemModel.qml
libs/mva_gui/qml/windows/: TextDialog.qml
libs/mva_gui/src/: logging.cpp
libs/mva_gui/src/animations/: abstract_animation.cpp  abstractanimation.cpp  fade_in.cpp  fade_out.cpp  fadein.cpp  fadeout.cpp  property_animation.cpp  propertyanimation.cpp  real_property_animation.cpp  realpropertyanimation.cpp
libs/mva_gui/src/items/: abstractitem.cpp  basic_item.cpp  basicitem.cpp  circleitem.cpp  circlepainteditem.cpp  geometry_item.cpp  rectangle.cpp  textitem.cpp
libs/mva_gui/src/windows/: mainwindowhandler.cpp
libs/mva_gui/templates/: template.tex
libs/mva_gui/tests/: CMakeLists.txt  test_images.qrc
libs/mva_gui/tests/animations/: tst_fade_in_and_out.cpp  tst_fadein.cpp  tst_property_animation.cpp
libs/mva_gui/tests/items/: tst_circleitem.cpp  tst_rectangleitem.cpp  tst_textitem.cpp
libs/mva_gui/tests/items/circleitem/: tst_circleitem.cpp
libs/mva_gui/tests/items/rectangleitem/: tst_rectangleitem.cpp
libs/mva_gui/tests/items/textitem/: tst_textitem.cpp
libs/mva_gui/tests/qml/: main.cpp  tst_circleitem.qml  tst_rectangleitem.qml  tst_textitem.qml
libs/mva_gui/tests/windows/: test_mainwindowhandler.cpp
libs/mva_workflow/: CMakeLists.txt
libs/mva_workflow/include/: logging.h
libs/mva_workflow/include/private/: logging.h
libs/mva_workflow/include/workflow/: item_observer.h  itemhandler.h  itemobserver.h  renderer.h  savefilehandler.h  workflow_global.h
libs/mva_workflow/src/: item_observer.cpp  itemhandler.cpp  itemobserver.cpp  logging.cpp  renderer.cpp  savefilehandler.cpp
libs/mva_workflow/tests/: CMakeLists.txt  renderer_test_resources.qrc  tst_item_observer.cpp  tst_itemhandler.cpp  tst_itemobserver.cpp  tst_renderer.cpp  tst_savefilehandler.cpp
libs/mva_workflow/tests/workflow/: tst_savefilehandler.cpp
mathvizanimator/: CMakeLists.txt
mathvizanimator/src/: ItemModel.qml  Main.qml  abstractobject.cpp  abstractobject.h  main.cpp  mainwindow.cpp  objectmodel.cpp  objectmodel.h  qmlimageprovider.cpp  rectangle.cpp  rectangle.h
src/: CMakeLists.txt  Main.qml  main.cpp  mainwindow.cpp  mainwindow.h  qmlimageprovider.h
src/gui/: Main.qml  mainwindow.cpp  mainwindow.h
src/items/: MVACircle.qml  MVAMouseArea.qml  MVARectangle.qml  MVASurroundingRectangle.qml  MVAText.qml  abstractitem.cpp  abstractitem.h  circleitem.cpp  circleitem.h  rectangle.cpp  rectangle.h  textitem.cpp  textitem.h
src/models/: MVAItemDelegate.qml  MVAItemModel.qml  objectmodel.cpp  objectmodel.h
src/mva_gui/: CMakeLists.txt
src/mva_gui/items/: MVACircle.qml  MVARectangle.qml  MVAText.qml  abstractitem.cpp  abstractitem.h  circleitem.cpp  circleitem.h  rectangle.cpp  rectangle.h  textitem.cpp  textitem.h
src/mva_gui/models/: ItemModel.qml  MVAItemModel.qml
src/qml/: Main.qml
src/workflow/: logging.cpp  logging.h
